# sysbot

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
config/: default.yaml
docs/: README.md  adapters.md  architecture.md  building-windows-exe.md  claude-code.md  configuration.md  dashboard.md  getting-started.md  installing-tools.md  models.md  service.md  sharing-tools.md  usage.md  writing-tools.md
lesysbot/: __init__.py  __main__.py
lesysbot/core/: agent.py  config.py  notify.py  paths.py  singleton.py  sysinfo.py  trace.py  types.py
lesysbot/dashboard/: __init__.py  server.py
lesysbot/install/: __init__.py  archive.py  errors.py  fetch.py  lockfile.py  manager.py  meta.py  spec.py
lesysbot/llm/: __init__.py  client.py
lesysbot/mcp/: __init__.py  cli.py  cli_tool.py  decorators.py  platform.py  registry.py
lesysbot/messaging/: __init__.py  base.py  cli.py  notice.py  slack.py  telegram.py
lesysbot/setup/: __init__.py  apply.py  cli.py  ui.py  wizard.py
packaging/: entry.py  lesysbot.spec  sysbot.spec
scripts/: build-exe.ps1  install.ps1  install.sh  uninstall.ps1  uninstall.sh
skills/: README.md
skills/configure-lesysbot/: SKILL.md
skills/develop-lesysbot/: SKILL.md
skills/install-lesysbot/: SKILL.md
skills/manage-service/: SKILL.md
skills/manage-tools/: SKILL.md
skills/setup-messaging/: SKILL.md
skills/switch-llm-backend/: SKILL.md
skills/troubleshoot-lesysbot/: SKILL.md
skills/uninstall-lesysbot/: SKILL.md
skills/update-lesysbot/: SKILL.md
skills/use-lesysbot/: SKILL.md
skills/write-tool/: SKILL.md
sysbot/: __init__.py  __main__.py
sysbot/core/: agent.py  config.py  paths.py  trace.py  types.py
sysbot/dashboard/: __init__.py  server.py
sysbot/install/: __init__.py  archive.py  fetch.py  lockfile.py  manager.py  meta.py  spec.py
sysbot/llm/: __init__.py  client.py
sysbot/mcp/: __init__.py  cli.py  cli_tool.py  decorators.py  registry.py
tests/: install_utils.py  test_agent.py  test_cli_tool.py  test_cli_tools.py  test_config.py  test_dashboard_api.py  test_decorators.py  test_install_archive.py  test_install_fetch.py  test_install_lockfile.py  test_install_manager.py  test_install_meta.py  test_install_spec.py  test_llm_health.py  test_notify.py  test_registry.py  test_setup_wizard.py  test_singleton.py  test_startup_notice.py  test_sysinfo.py  test_tool_manage.py
tools/: README.md
(+26 files in other folders)
