[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysbot"
version = "0.1.0"
description = "A pluggable bot framework: local LLM + MCP tools + Slack/Telegram messaging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-telegram-bot[ext]>=21.0",
    "slack-bolt>=1.18.0",
    "rich>=13.0",
    "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
# Web dashboard (sysbot --dashboard): manage tools + check LLM health.
dashboard = [
    "aiohttp>=3.9",
]

[project.scripts]
sysbot = "sysbot.__main__:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
