[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lesysbot"
version = "0.1.0"
description = "A pluggable bot framework: local LLM + MCP tools + Slack/Telegram messaging"
readme = "README.md"
requires-python = ">=3.11"
# The CLI provider, the tool registry and `lesysbot tools`/`lesysbot setup` need
# only these. Chat platforms and the dashboard are extras: `__main__` imports
# each adapter lazily, so an install without them is fully functional.
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "watchfiles>=0.21",
]

[project.optional-dependencies]
# --provider telegram
telegram = [
    "python-telegram-bot[ext]>=21.0",
]
# --provider slack. slack-bolt does not declare aiohttp, but its async socket
# handler imports it — pin it here so the provider works on a fresh install.
slack = [
    "slack-bolt>=1.18.0",
    "aiohttp>=3.9",
]
# Web dashboard (lesysbot --dashboard): manage tools + check LLM health.
dashboard = [
    "aiohttp>=3.9",
]
# Everything a user-facing install can offer — what scripts/install.{sh,ps1}
# install, so every option the setup wizard presents actually works.
all = [
    "lesysbot[telegram,slack,dashboard]",
]
dev = [
    "lesysbot[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
lesysbot = "lesysbot.__main__:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
